correccion en la redireccion